--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit ametgit consectetur adipisicing elit. Rerum sunt
+      magnam velit fuga quos eaque quas voluptates illo sit. Ullam reiciendis
+      ratione at, maxime eveniet dolore voluptatibus excepturi minus illo.
+    </p>
+    <h1>LIFE IS INABAHSJ</h1>
+  </body>
 </html>
